<resources>
    <string name="app_name">waasi</string>
    <string name="facebook_app_id">2088184691409493</string>
    <string name="fb_login_protocol_scheme">fb2088184691409493</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_forgot_password">Forget Password</string>
    <string name="btn_link_to_register">Register</string>
    <string name="minimum_password">Password not valid</string>
    <string name="auth_failed">Auth failed</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="email">Email</string>
    <string name="action_sign_in_short">Register</string>
    <string name="btn_link_to_login">Login</string>
    <string name="offers">OFFERS!!</string>
</resources>
